objects/Employee__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Employee date of birth.</description>
    <inlineHelpText>Employee date of birth.</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>