objects/Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference fora Department Object.</description>
    <inlineHelpText>Reference fora Department Object.</inlineHelpText>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>