objects/Employee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Employee email address.</description>
    <inlineHelpText>Employee email address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>