objects/Employee__c/fields/Employee_position__c.field-meta.xml
<CustomField>
    <fullName>Employee_position__c</fullName>
    <label>Employee position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Arhitect</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>