objects/Employee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Employee telephone number.</description>
    <inlineHelpText>Employee telephone number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>