objects/Employee__c/fields/Total_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Total_Attachments__c</fullName>
    <label>Total Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>